--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body class="app">
-    <header class="cabecalho"></header>
-    <main class="conteudo"></main>
-    <footer class="rodape"></footer>
+    <header class="cabecalho">Cabeçalho</header>
+    <main class="conteudo">Conteúdo</main>
+    <footer class="rodape">Rodapé</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
