--- a/index.html
+++ b/index.html
@@ -386,7 +386,12 @@
             </div>
         </section>
     </main>
-    <footer class="rodape">Rodapé</footer>
+    <footer class="rodape"></footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
+    <script>
+        var rodape = document.querySelector('.rodape');
+        var ano = new Date().getFullYear();
+        rodape.innerHTML = `Todos os direitos reservados &copy; ${ano}`
+    </script>
 </body>
 </html>
